--- a/Dictationary.html
+++ b/Dictationary.html
@@ -2,57 +2,8 @@
 <html>
 <head>
   <link rel:icon href="https://img.freepik.com/premium-photo/gold-letter-d_2227-948.jpg?w=360" type="image/x-icon">
+  <link rel="stylesheet" href="dictionary.css">
   <title>English to English</title>
-  <style>
-    /**Whole body**/
-    body {
-      margin: 0;
-      height: 70vh;
-      font-family: 'Times New Roman', Times, serif, sans-serif;
-      text-align: center;                
-      margin-top: 50px;
-      display: flex;
-      background-color: rgb(243, 230, 225);
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-    }
-    .content{
-      background-color: rgb(0, 255, 149);
-      border-radius: 20px;
-      border: 1px solid orange;
-      padding:2rem;
-      box-shadow: 0px 0px 40px rgb(255, 69, 0);
-      animation: neonGlow-content infinite alternate;
-    }
-    input {
-      border-radius: 7px;
-      padding: 10px;
-      font-size: 18px;
-      width: 250px;
-    }
-    button {
-      padding: 10px 20px;
-      font-size: 18px;
-      margin-left: 10px;
-      border-radius: 12.5px;
-      border-color: aqua;
-      background-color: rgb(245, 245, 245);
-      box-shadow: 0px 0px 10px rgba(65, 63, 63, 0.1);
-    }
-    button:hover {
-      background-color: aqua;
-      border-radius: 10px;
-      box-shadow: 0px 0px 2px rgb(68, 68, 68);
-      color: white;
-      transform: scale(1.05);
-    }
-    #result {
-      margin-top: 30px;
-      font-size: 20px;
-      color: #333;
-    }
-  </style>
 </head>
 <body>
   <div class="content">
@@ -61,33 +12,6 @@
   <button onclick="searchWord()">Search</button>
   <div id="result"></div>
 </div>
-<script>
-        async function searchWord() {
-      const word = document.getElementById("wordInput").value.trim();
-      const resultDiv = document.getElementById("result");
-
-      if (word === "") {
-        resultDiv.innerHTML = "Please enter a word.";
-        return;
-      }
-
-      resultDiv.innerHTML = "Searching...";
-
-      try {
-        const response = await fetch(`https://api.dictionaryapi.dev/api/v2/entries/en/${word}`);
-        const data = await response.json();
-
-        if (data.title === "No Definitions Found") {
-          resultDiv.innerHTML = "No meaning found. Try another word.";
-        } else {
-          const meaning = data[0].meanings[0].definitions[0].definition;
-          resultDiv.innerHTML = `<strong>${word}</strong>: ${meaning}`;
-        }
-      } catch (error) {
-        resultDiv.innerHTML = "Something went wrong. Check your internet or try again.";
-      }
-    }
- 
-</script>
+<script src="dictionary.js"></script>
 </body>
 </html>
